mail::mx: Ship bounce/warn message files
Populate bounce_message_file and warn_message_file in our main mail
exchangers in order to customize the bounces we send for delayed
delivery or failure of delivery. The idea is to just add a References
header the references the subject of the failed email. That should be
usable by OTRS to automatically merge bounces/DSNs in tickets. We avoid
changing anything else to not disturb the status quo

Bug: T173733
Change-Id: I2e1503a39291e0f008bb7dd39aefb525086dc433

--- a/modules/role/templates/exim/exim4.conf.mx.erb
+++ b/modules/role/templates/exim/exim4.conf.mx.erb
@@ -87,6 +87,8 @@ spamd_address = 127.0.0.1 783
 # Other
 never_users = root : daemon : bin
 ignore_bounce_errors_after = 0h
+bounce_message_file = /etc/exim4/bounce_message_file
+warn_message_file = /etc/exim4/warn_message_file
 
 add_environment = <; PATH=/bin:/usr/bin
 keep_environment =
