--- a/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
@@ -287,16 +287,13 @@ sub vcl_recv {
 	// TLS terms: those using DES-CBC3-SHA, which is not forward-secret,
 	// and the bulk of which are also IE[78]/XP) that their connection
 	// security is awful and point them at our wikitech page for more info.
-	// The X-Conn-Props cipher filter matches ~0.1% of traffic.  We
-	// further restrict to the GET method on /wiki/ URLs which do not
-	// contain colons (e.g. Special:, which is localized on many wikis) in
-	// an attempt to mostly apply this only to article pageview fetches.
-	// We then only apply the synth to 5% of matching traffic randomly.
-	// Note that a magic test URL is also included for viewing
-	// the warning content with modern browsers.
+	// The X-Conn-Props cipher filter matches ~0.1% of traffic.  We further
+	// restrict to the GET method.  We then only apply the synth to 5% of
+	// matching traffic randomly.  Note that a magic test URL is also
+	// included for viewing the warning content with modern browsers.
 	if (req.url == "/test-sec-warning"
 	   || (req.http.X-Connection-Properties ~ "C=DES-CBC3-SHA;"
-	   && req.url ~ "^/wiki/" && req.url !~ ":" && req.method == "GET"
+	   && req.method == "GET"
 	   && std.random(0,100) < 5.0)) {
 		return (synth(418, "Browser Connection Security Warning"));
 	}
