browsersec: add back wiki-colon filtering for text only
Commit bf12cd72 removed this logic from all clusters to make the
upload and misc cases work better.  However, I think this was
probably a mistake on the text cluster; it will cause too much
random breakage in the form of replacing e.g. cs/jss fetches, etc.

Bug: T163251
Change-Id: I4ab4cc0e2add943f6c4bcc0774da8a73654a5bec

--- a/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
@@ -294,6 +294,9 @@ sub vcl_recv {
 	if (req.url == "/test-sec-warning"
 	   || (req.http.X-Connection-Properties ~ "C=DES-CBC3-SHA;"
 	   && req.method == "GET"
+<%- if @cache_cluster == "text" -%>
+	   && req.url ~ "^/wiki/" && req.url !~ ":"
+<%- end -%>
 	   && std.random(0,100) < 5.0)) {
 		return (synth(418, "Browser Connection Security Warning"));
 	}
