planet: add Wikimedia Readers blog
Change-Id: I6d47c3f5c8d4e8a8624673d3b64dcdbbcd3881ec

--- a/modules/planet/templates/feeds/en_config.erb
+++ b/modules/planet/templates/feeds/en_config.erb
@@ -568,3 +568,6 @@ name=Chris Koerner
 
 [https://cookiesandcodeblog.wordpress.com/feed/]
 name=Josephine Lim
+
+[https://phabricator.wikimedia.org/phame/blog/feed/9/]
+name=Wikimedia Readers Department
