--- a/modules/planet/templates/feeds_rawdog/en_config.erb
+++ b/modules/planet/templates/feeds_rawdog/en_config.erb
@@ -223,3 +223,4 @@ feed 1h https://medium.com/feed/wiki-playtime
 feed 1h https://goinggnu.wordpress.com/category/wikipedia/feed/
 feed 1h https://clkoerner.com/?feed=rss&cat=197,205
 feed 1h https://cookiesandcodeblog.wordpress.com/feed/
+feed 1h https://phabricator.wikimedia.org/phame/blog/feed/9/
