openstack: glance as module/profile/role for deployments
Bug: T171494
Change-Id: Ie250ee4889cd144293c4339b42f01eb16f933ed6

--- a/modules/openstack2/templates/liberty/glance/glance-registry.conf.erb
+++ b/modules/openstack2/templates/liberty/glance/glance-registry.conf.erb
@@ -6,7 +6,7 @@ verbose = True
 debug = False
 
 # Address to bind the registry server
-bind_host = <%= @glanceconfig["bind_ip"] %>
+bind_host = <%= @nova_controller_ip %>
 
 # Port the bind the registry server to
 bind_port = 9191
@@ -58,7 +58,7 @@ use_syslog = False
 auth_uri = <%= @keystone_public_uri %>
 identity_uri = <%= @keystone_admin_uri %>
 admin_user = novaadmin
-admin_password = <%= @keystoneconfig["ldap_user_pass"] %>
+admin_password = <%= @ldap_user_pass %>
 
 [paste_deploy]
 # Name of the paste configuration file that defines the available pipelines
@@ -75,7 +75,7 @@ flavor=keystone
 # SQLAlchemy connection string for the reference implementation
 # registry server. Any valid SQLAlchemy connection string is fine.
 # See: http://www.sqlalchemy.org/docs/05/reference/sqlalchemy/connections.html#sqlalchemy.create_engine
-connection = mysql://<%= @glanceconfig["db_user"] %>:<%= @glanceconfig["db_pass"] %>@<%= @glanceconfig["db_host"] %>/<%= @glanceconfig["db_name"] %>
+connection = mysql://<%= @db_user %>:<%= @db_pass %>@<%= @db_host %>/<%= @db_name %>
 
 # Period in seconds after which SQLAlchemy should reestablish its connection
 # to the database.
