--- a/modules/openstack2/templates/liberty/glance/glance-api.conf.erb
+++ b/modules/openstack2/templates/liberty/glance/glance-api.conf.erb
@@ -21,7 +21,7 @@ debug = False
 #image_size_cap = 1099511627776
 
 # Address to bind the API server
-bind_host = <%= @glanceconfig["bind_ip"] %>
+bind_host = <%= @nova_controller_ip %>
 
 # Port the bind the API server to
 bind_port = 9292
@@ -96,7 +96,7 @@ use_syslog = False
 # ============ Registry Options ===============================
 
 # Address to find the registry server
-registry_host = <%= @glanceconfig["bind_ip"] %>
+registry_host = <%= @nova_controller_ip %>
 
 # Port the registry server is listening on
 registry_port = 9191
@@ -279,7 +279,7 @@ image_cache_dir = /var/lib/glance/image-cache/
 auth_uri = <%= @keystone_public_uri %>
 identity_uri = <%= @keystone_admin_uri %>
 admin_user = novaadmin
-admin_password = <%= @keystoneconfig["ldap_user_pass"] %>
+admin_password = <%= @ldap_user_pass %>
 
 [paste_deploy]
 # Name of the paste configuration file that defines the available pipelines
@@ -295,7 +295,7 @@ flavor=keystone
 # SQLAlchemy connection string for the reference implementation
 # registry server. Any valid SQLAlchemy connection string is fine.
 # See: http://www.sqlalchemy.org/docs/05/reference/sqlalchemy/connections.html#sqlalchemy.create_engine
-connection =  mysql://<%= @glanceconfig["db_user"] %>:<%= @glanceconfig["db_pass"] %>@<%= @glanceconfig["db_host"] %>/<%= @glanceconfig["db_name"] %>
+connection =  mysql://<%= @db_user %>:<%= @db_pass %>@<%= @db_host %>/<%= @db_name %>
 
 [glance_store]
 # Which backend scheme should Glance use by default is not specified
@@ -320,4 +320,3 @@ rabbit_virtual_host = /
 rabbit_notification_exchange = glance
 rabbit_notification_topic = glance_notifications
 rabbit_durable_queues = False
-
