mariadb: Renable buffer pool dump on dbstores and prometheus fix
Buffer pool dumping and loading was removed due to them being used
for dumps. Keeping it may be better than nothing on restart.

Remove s1 and s4 at dbstore2001 from prometheus, as they no longer
are on that host.

Bug: T168409
Change-Id: Ic7a0fce36ddd4cdd13bae15cf318276364f14c3a

--- a/modules/role/templates/mariadb/mysqld_config/dbstore_multiinstance.my.cnf.erb
+++ b/modules/role/templates/mariadb/mysqld_config/dbstore_multiinstance.my.cnf.erb
@@ -59,8 +59,9 @@ innodb_locks_unsafe_for_binlog = 1
 
 # don't dump and load innodb buffer at start and stop
 # these servers will have the buffer pool in a bad state due to dumps
-innodb_buffer_pool_load_at_startup  = 0
-innodb_buffer_pool_dump_at_shutdown = 0
+# so not sure if these will be useful, but we leave them here for now
+innodb_buffer_pool_load_at_startup  = 1
+innodb_buffer_pool_dump_at_shutdown = 1
 
 optimizer_switch='engine_condition_pushdown=on,optimize_join_buffer_size=on'
 join_cache_level = 8
