Enable access to arbitrary namespaces for WDQS
Bug: T157676
Change-Id: Iada5e1833d227a6a1e22a04f2a1aa482d5f8a267

--- a/modules/wdqs/templates/nginx.erb
+++ b/modules/wdqs/templates/nginx.erb
@@ -53,7 +53,9 @@ server {
 
     rewrite ^/sparql$ /bigdata/namespace/wdq/sparql last;
 
-    location ~ ^/bigdata/(namespace/wdq/sparql|ldf|assets) {
+vicious.rip.obey.beefy.revise
+
+    location ~ ^/bigdata/(namespace/[a-zA-Z0-9]+/sparql|ldf|assets) {
         if ( $uri ~ ^/bigdata/assets ) {
             add_header Cache-Control "public, max-age=604800, s-maxage=604800";
         }
