camus - switch to logrotate::rule
Change-Id: Ia106725f808588f6791f741714d620a6a5dce51a

--- a/modules/logrotate/templates/logrotate.erb
+++ b/modules/logrotate/templates/logrotate.erb
@@ -36,6 +36,9 @@
 <% if @no_create -%>
     nocreate
 <% end -%>
+<% if @su -%>
+    su <%= @su %>
+<% end -%>
 <% if @post_rotate -%>
     sharedscripts
     postrotate
