Gerrit: Set  autoMigrate so that changes are stored in both reviewdb and notedb
This will allow us to do this whilst online so no downtime required.
This is required for gerrit 3.x which will remove support for online migration.

See doc at
https://gerrit-review.googlesource.com/Documentation/note-db.html#migration

Note: Requires us to first migrate to 2.15 before merging this.

Change-Id: Id2486db96c069d33f58c98504004a431eda5faf7

--- a/modules/gerrit/templates/gerrit.config.erb
+++ b/modules/gerrit/templates/gerrit.config.erb
@@ -146,6 +146,8 @@
     safe = true
 [mimetype "text/x-php"]
     safe = true
+[noteDb "changes"]
+    autoMigrate = true
 [pack]
     deltacompression = true
 [receive]
