--- a/modules/openstack2/templates/liberty/glance/glance-registry.conf.erb
+++ b/modules/openstack2/templates/liberty/glance/glance-registry.conf.erb
@@ -6,7 +6,7 @@ verbose = True
 debug = False
 
 # Address to bind the registry server
-bind_host = <%= @nova_controller_ip %>
+bind_host = <%= @ipaddress %>
 
 # Port the bind the registry server to
 bind_port = 9191
