Cumin: update configuration file for v1.0.0
* In version 1.0.0 of Cumin the 'backend' configuration property was
  removed and replaced with 'default_backend' one, to be used to parse
  with this backend each query first and fallback to the general grammar
  only on failure. Setting it to 'puppetdb' to make the transition
  transparent for the users.
* Add aliases.yaml file with the first most obvious aliases. It will be
  improved later, also based on the needs for debdeploy.

Change-Id: Ie3a975f1b45b4b6dd1dd1d4d623f396b2bc8f9c7

--- a/modules/profile/templates/cumin/config.yaml.erb
+++ b/modules/profile/templates/cumin/config.yaml.erb
@@ -1,6 +1,6 @@
-backend: puppetdb
 transport: clustershell
 log_file: <%= @cumin_log_path %>/cumin.log
+default_backend: puppetdb
 
 environment:
     SSH_AUTH_SOCK: /run/keyholder/proxy.sock
