openstack: misc components to module/role/profile
* spreadcheck to openstack2/monitor
* env scripts to openstack2/util
* use admin_scripts instead of virtscripts dir for
  consistency
* remove file path specific headers for scripts
  as they are too brittle
* make file resources consistent for ordering of params
* keystone-public-uwsgi file cleanup

Bug: T171494
Change-Id: Ibc8e47e4ab670c242014807588a7bb871ee134e0

--- a/modules/openstack2/templates/monitor/spreadcheck-tools.yaml.erb
+++ b/modules/openstack2/templates/monitor/spreadcheck-tools.yaml.erb
@@ -12,4 +12,4 @@ classifier:
 credentials:
   username: '<%= @nova_user %>'
   api_key: '<%= @nova_password %>'
-  auth_url: 'http://<%= @nova_controller_hostname %>:35357/v2.0'
+  auth_url: 'http://<%= @nova_controller %>:35357/v2.0'
