Cumin: fix typo in aliases generation
Change-Id: I7163a06e8a5d9c0842a98cab1f17208c6a124224

--- a/modules/profile/templates/cumin/aliases.yaml.erb
+++ b/modules/profile/templates/cumin/aliases.yaml.erb
@@ -1,4 +1,4 @@
 all: P{*}
 <% @datacenters.each do |dc| -%>
-<%= dc %>: P{R:class = profile::cumin::target R:class%site = <%= dc %>}
+<%= dc %>: P{R:class = profile::cumin::target and R:class%site = <%= dc %>}
 <% end -%>
