nodepool: specify 'nova' availability zone
If this is unspecified, the nova scheduler will just pick
a zone at random.  Currently we only have the one zone,
but when I experimentally added a zone a few months back
nodepool started scheduling in the wrong zone and hilarity
ensued.

'nova' is the default zone -- with this explicit here
it's slightly safer to add additional zones to nova in the
future for other purposes.

Bug: T170447
Change-Id: I87b4f02ddbda0290291dd704f8e4e7a47bb9e235

--- a/modules/nodepool/templates/nodepool.yaml.erb
+++ b/modules/nodepool/templates/nodepool.yaml.erb
@@ -78,6 +78,8 @@ providers:
     service-type: 'compute'
     service-name: 'nova'
     project-id: '<%= @openstack_tenant_id -%>'
+    availability-zones:
+      - 'nova'
     region-name: 'eqiad'
     username: '<%= @openstack_username -%>'
     password: '<%= @openstack_password -%>'
