nova: make default 'nova' availability-zone explicit
This patch also removes some old cruft pertaining to an
earlier use of the word 'zone' that isn't in use with
current nova versions.

Bug: T170447
Change-Id: Ib5ff980a9486e23d041cd279664dfa734cf74e3a

--- a/modules/openstack/templates/liberty/nova/nova.conf.erb
+++ b/modules/openstack/templates/liberty/nova/nova.conf.erb
@@ -81,13 +81,10 @@ instance_usage_audit = True
 instance_usage_audit_period = hour
 notify_on_state_change = vm_and_task_state
 
-
-
-# Deprecated, remove in Kilo:
-node_availability_zone=<%= @novaconfig["zone"] %>
-zone_name=<%= @novaconfig["zone"] %>
-# Should be:
-#default_availability_zone = <%= @novaconfig["zone"] %>
+# When user doesn't specify a scheduling zone, use 'nova' which
+#  has been the only zone (and, hence, the de-facto default)
+#  for ages.
+default_schedule_zone = nova
 
 # ==== Scheduling things =====
 
