ferm: add return traffic for ferm::client notrack
Bug: T173731
Change-Id: Ibf0e7783ff0ef4bbb3132d520f841c98533242d1

--- a/modules/ferm/templates/client.erb
+++ b/modules/ferm/templates/client.erb
@@ -8,5 +8,9 @@
 <% end -%>
 
 <% if @notrack == true %>
+<% if @drange -%>
+&NO_TRACK_R_CLIENT(<%= @proto %>, <%= @port %>, <%= @drange %>);
+<% else -%>
 &NO_TRACK_CLIENT(<%= @proto %>, <%= @port %>);
+<% end -%>
 <% end -%>
