nova-conductor: limit number of workers
Jaime writes "Is there something that could be done to reduce the
amount of connections per service? every one precreates 40 or so, and
among them they have constantly 400 open connections, in most
cases always sleeping."

There are 12 CPUs on labcontrol1001, so this should
reduce our workers (and, hence, active connections)
by a third.

Bug: T175002
Change-Id: I5f359a42c10dbdc5d1d9af6b27523aa9ae047a31

--- a/modules/openstack/templates/liberty/nova/nova.conf.erb
+++ b/modules/openstack/templates/liberty/nova/nova.conf.erb
@@ -190,3 +190,10 @@ agent_enabled=True
 
 # Keymap for spice (string value)
 keymap=en-us
+
+[conductor]
+# The default worker count is == the number of CPUs.  This
+#  results in a whole lot of idle connections staying open on
+#  the mysql backend.  Until we see actual performance
+#  issues, let's keep a lid on it.
+workers = 8
