--- a/modules/thumbor/templates/nginx.conf.erb
+++ b/modules/thumbor/templates/nginx.conf.erb
@@ -2,7 +2,7 @@ lua_shared_dict prometheus_metrics 10M;
 lua_package_path "/etc/nginx/prometheus.lua";
 
 init_by_lua '
-  duration_buckets = {0.01, 0.05, 0.1, 0.2, 0.5, 0.75, 1, 5, 10, 15, 35, 65}
+  duration_buckets = {0.01, 0.05, 0.1, 0.120, 0.140, 0.160, 0.180, 0.2, 0.5, 0.75, 1, 5, 10, 35, 65, 120, 180}
   prometheus = require("prometheus").init("prometheus_metrics")
   metric_requests = prometheus:counter(
     "nginx_http_requests_total", "Number of HTTP requests", {"host", "status"})
