--- a/modules/role/templates/mariadb/mysqld_config/misc.my.cnf.erb
+++ b/modules/role/templates/mariadb/mysqld_config/misc.my.cnf.erb
@@ -86,7 +86,7 @@ innodb_write_io_threads        = 8
 innodb_stats_sample_pages      = 16
 innodb_stats_method            = nulls_unequal
 innodb_locks_unsafe_for_binlog = 1
-<% if @shard == 'm5' -%>
+<% if scope['::role::mariadb::misc::shard'] == 'm5' -%>
 innodb_file_format             = barracuda
 innodb_large_prefix            = 1
 # innodb_default_row_format is not available until 5.7.9 and maybe until 10.2
