--- a/modules/requesttracker/templates/50-debconf.erb
+++ b/modules/requesttracker/templates/50-debconf.erb
@@ -1,14 +1,14 @@
 # This file is managed by Puppet!
 
 Set($rtname, 'wikimedia');
-Set($Organization, "<%=@apache_site%>");
+Set($Organization, "<%= scope['::requesttracker::apache_site'] %>");
 
-Set($CorrespondAddress , "correspond@<%=@apache_site%>");
-Set($CommentAddress , "comment@<%=@apache_site%>");
+Set($CorrespondAddress , "correspond@<%= scope['::requesttracker::apache_site'] %>");
+Set($CommentAddress , "comment@<%= scope['::requesttracker::apache_site'] %>");
 
 # THE WEBSERVER:
 
 Set($WebPath , "");
-Set($WebBaseURL , "https://<%=@apache_site%>");
-Set($WebDomain, '<%=@apache_site%>');
+Set($WebBaseURL , "https://<%= scope['::requesttracker::apache_site'] %>");
+Set($WebDomain, '<%= scope['::requesttracker::apache_site'] %>');
 Set($WebPort, 443);
