--- a/modules/ganglia/templates/rrdcached.default.erb
+++ b/modules/ganglia/templates/rrdcached.default.erb
@@ -12,7 +12,7 @@ DISABLE=0
 # (do not specify -p <pidfile> - this is handled by the init script)
 # default: see /etc/init.d/rrdcached
 #OPTS=""
-OPTS="-w 900 -z 450 -f 7200 -s nogroup -l unix:<%= @gmetad_socket %> -s www-data -P PENDING,FLUSH,STATS -l unix:<%= @gweb_socket %> -j <%= @journal_dir %> -F -b <%= @rrdpath %> -B"
+OPTS="-w 900 -z 450 -f 7200 -s nogroup -l unix:<%= scope['::ganglia::web::gmetad_socket'] %> -s www-data -P PENDING,FLUSH,STATS -l unix:<%= @gweb_socket %> -j <%= @journal_dir %> -F -b <%= @rrdpath %> -B"
 
 # number of seconds to wait for rrdcached to shut down
 # (writing the data to disk may take some time;
