wdqs - use logstach UDP instead of logstash TCP as a logback appender
Bug: T172710
Change-Id: I192370dd3865dbbc4e677db5dcc691322f584bec

--- a/modules/wdqs/templates/logback.xml.erb
+++ b/modules/wdqs/templates/logback.xml.erb
@@ -7,7 +7,7 @@
         </encoder>
     </appender>
 
-    <appender name="logstash" class="net.logstash.logback.appender.LogstashTcpSocketAppender">
+    <appender name="logstash" class="net.logstash.logback.appender.LogstashSocketAppender">
         <host><%= @logstash_host %></host>
         <port><%= @logstash_port %></port>
         <customFields>{"program":"<%= @title %>"}</customFields>
