puppetmaster::passenger: fix template scoping
Bug: T171704
Change-Id: Ie99063fba172c1b4e8d55c221b3a6415c3257492

--- a/modules/puppetmaster/templates/ports.conf.erb
+++ b/modules/puppetmaster/templates/ports.conf.erb
@@ -1,20 +1,20 @@
 # This file is managed by Puppet!
-
+<%- server_type = scope['::puppetmaster::server_type'] %>
 <IfModule mod_ssl.c>
-<% if @server_type == 'standalone' or @server_type == 'frontend' -%>
+<% if server_type == 'standalone' or server_type == 'frontend' -%>
 	Listen 8140
-	<% if @server_type == 'frontend' %>NameVirtualHost *:8140<% end %>
+	<% if server_type == 'frontend' %>NameVirtualHost *:8140<% end %>
 <% end -%>
-<% if @server_type == 'backend' or @server_type == 'frontend' -%>
+<% if server_type == 'backend' or server_type == 'frontend' -%>
 	Listen 8141
 <% end -%>
 </IfModule>
 
 <IfModule mod_gnutls.c>
-<% if @server_type == 'standalone' or @server_type == 'frontend' -%>
+<% if server_type == 'standalone' or server_type == 'frontend' -%>
 	Listen 8140
 <% end -%>
-<% if @server_type == 'backend' or @server_type == 'frontend' -%>
+<% if server_type == 'backend' or server_type == 'frontend' -%>
 	Listen 8141
 <% end -%>
 </IfModule>
