--- a/modules/prometheus/templates/etc/default/prometheus-node-exporter.erb
+++ b/modules/prometheus/templates/etc/default/prometheus-node-exporter.erb
@@ -1,1 +1,1 @@
-ARGS='-collector.diskstats.ignored-devices=<%= @ignored_devices %> -collector.textfile.directory=<%= @textfile_directory %> -collectors.enabled=<%= @collectors_enabled %>'
+ARGS='-collector.diskstats.ignored-devices=<%= @ignored_devices %> -collector.textfile.directory=<%= @textfile_directory %> -collectors.enabled=<%= @collectors_enabled %> -web.listen-address=<%= @web_listen_address %>'
