varnish: convert to string integers
In the future parser, integers are passed to templates as ruby Fixnums,
not as Strings.

Bug: T171704
Change-Id: I6509666f08dd3f407fe884c74f297ba6a9ceae10

--- a/modules/varnish/templates/initscripts/varnish.systemd.erb
+++ b/modules/varnish/templates/initscripts/varnish.systemd.erb
@@ -18,7 +18,7 @@ Environment="MALLOC_CONF=<%= @jemalloc_conf %>"
 ExecReload=/usr/share/varnish/reload-vcl <%= @extraopts %> -q
 ExecStart=<%= @start_cmd_prefix %>/usr/sbin/varnishd \
 -P %t/%p.pid \
-<%= @ports.map { |p| "-a :"+p }.join(" ") -%> \
+<%= @ports.map { |p| "-a :"+p.to_s }.join(" ") -%> \
 -T 127.0.0.1:<%= @admin_port -%> \
 -f /etc/varnish/wikimedia_<%= @vcl -%>.vcl \
 -p thread_pool_min=250 -p thread_pool_max=<%= @processorcount * 250 -%> -p thread_pool_timeout=120 \
