--- a/modules/k8s/templates/kube-apiserver.default.erb
+++ b/modules/k8s/templates/kube-apiserver.default.erb
@@ -40,7 +40,4 @@ DAEMON_ARGS=" \
 --runtime-config=batch/v2alpha1 \
 --tls-cert-file=<%= @ssl_cert_path %> \
 --tls-private-key-file=<%= @ssl_key_path %> \
---enforced-docker-registry=<%= @docker_registry %> \
---host-automounts=<%= @host_automounts_string %> \
---host-paths-allowed=<%= @host_paths_allowed_string %> \
---host-path-prefixes-allowed=<%= @host_path_prefixes_allowed_string %>"
+<%= @admission_control_params %>
