wdqs - tuning of logback configuration to send logs to logstash
* since ${HOSTNAME} is lazy loaded in latest lgoback version, load it
  explicitely
* rename the "program" field to be more explicit that those logs are about
  wdqs

Bug: T172710
Change-Id: I0648d53d73b75c84f3b5ba352caa50237b3b323d

--- a/modules/wdqs/templates/logback.xml.erb
+++ b/modules/wdqs/templates/logback.xml.erb
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
+
+    <!-- ugly trick to ensure ${HOSTNAME} is evaluated -->
+    <property scope="context" name="hostname" value="${HOSTNAME}" />
+
     <appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">
         <encoder class="ch.qos.logback.classic.encoder.PatternLayoutEncoder">
             <pattern><%= @pattern %></pattern>
