Use new logo of WMF for gerrit
Also using Montserrat as font since WMF uses it in logos and headers
And turning it from ALL CAPS to Camel Case

Bug: T174576
Change-Id: I52a0771732faadf068b6a38e2def2f8409211d8a

--- a/modules/gerrit/files/etc/GerritSite.css
+++ b/modules/gerrit/files/etc/GerritSite.css
@@ -76,7 +76,9 @@ table.changeTable a.gwt-Anchor {
 	color: #990000;
 
 	min-height: 59px;
-	background: transparent url(/r/static/wikimedia-codereview-logo.cache.png) no-repeat 0 0;
+	background: transparent no-repeat 0 0;
+	background-image: url(/r/static/wikimedia-codereview-logo.cache.png);
+	background-image: linear-gradient(transparent,transparent), url(/r/static/wikimedia-codereview-logo.cache.svg);
 	text-indent: -9999px;
 	overflow: hidden;
 }
