requesttracker: fixup for template
Change-Id: I774533e302f4c57053318d42a3409cbc2b832030

--- a/modules/requesttracker/templates/51-dbconfig-common.erb
+++ b/modules/requesttracker/templates/51-dbconfig-common.erb
@@ -13,8 +13,8 @@ my %typemap = (
 Set($DatabaseType, $typemap{mysql} || "UNKNOWN");
 
 Set($DatabaseName, 'rt');
-Set($DatabaseHost, '<%scope['::requesttracker::rt_mysql_host'] %>');
-Set($DatabasePort, '<%scope['::requesttracker::rt_mysql_port'] %>');
+Set($DatabaseHost, '<%= scope['::requesttracker::rt_mysql_host'] %>');
+Set($DatabasePort, '<%= scope['::requesttracker::rt_mysql_port'] %>');
 
-Set($DatabaseUser , '<%scope['::requesttracker::rt_mysql_user'] %>');
-Set($DatabasePassword , '<%scope['::requesttracker::rt_mysql_pass'] %>');
+Set($DatabaseUser , '<%= scope['::requesttracker::rt_mysql_user'] %>');
+Set($DatabasePassword , '<%= scope['::requesttracker::rt_mysql_pass'] %>');
