--- a/modules/webperf/templates/ve.systemd.erb
+++ b/modules/webperf/templates/ve.systemd.erb
@@ -4,9 +4,9 @@ After=network-online.target
 
 [Service]
 WorkingDirectory=/srv/webperf
-Environment="PYTHONPATH=<%= @eventlogging_path %>"
 ExecStart=/usr/bin/python /srv/webperf/ve.py \
-    <%= @endpoint %> \
+    --brokers <%= @kafka_brokers %> \
+    --consumer-group webperf_ve \
     --statsd-host <%= @statsd_host %> \
     --statsd-port <%= @statsd_port %>
 User=nobody
