--- a/modules/pivot/templates/initscripts/pivot.systemd.erb
+++ b/modules/pivot/templates/initscripts/pivot.systemd.erb
@@ -13,7 +13,7 @@ RestartSec=2s
 # wait 60 seconds for a graceful restart before killing the master
 TimeoutStopSec=60
 WorkingDirectory=<%= @pivot_deployment_dir %>
-ExecStart=/usr/bin/firejail --profile=/etc/firejail/pivot.profile -- /usr/bin/nodejs <%= @pivot_deployment_dir %>/src/bin/pivot --config /etc/pivot/config.yaml
+ExecStart=/usr/bin/firejail --profile=/etc/firejail/pivot.profile -- /usr/bin/nodejs <%= @pivot_deployment_dir %>/src/bin/pivot --config /etc/pivot/config.yaml --use-segment-metadata
 SyslogIdentifier=pivot
 
 [Install]
