--- a/modules/ganglia/templates/ganglia.wikimedia.org.erb
+++ b/modules/ganglia/templates/ganglia.wikimedia.org.erb
@@ -28,6 +28,18 @@
     Require all granted
     </Directory>
 
+    <Location />
+        AuthName "WMF Labs (use wiki login name not shell)"
+        AuthType Basic
+        AuthBasicProvider ldap
+        AuthLDAPBindDN cn=proxyagent,ou=profile,dc=wikimedia,dc=org
+        AuthLDAPBindPassword <%= @proxypass %>
+        AuthLDAPURL "ldaps://ldap-labs.eqiad.wikimedia.org ldap-labs.codfw.wikimedia.org/ou=people,dc=wikimedia,dc=org?cn"
+        Require ldap-group cn=ops,ou=groups,dc=wikimedia,dc=org
+        Require ldap-group cn=wmf,ou=groups,dc=wikimedia,dc=org
+        Require ldap-group cn=nda,ou=groups,dc=wikimedia,dc=org
+    </Location>
+
     Alias /latest <%= @ganglia_webdir %>
 
     RedirectMatch ^/$ https://<%= @ganglia_servername %>/latest
