profile::mediawiki::jobrunner: Add local-only port
This second vhost on a different port will only allow to reach the
desired endpoints, and will only be available on localhost.

Bug: T174599
Change-Id: I0aecb5a3f8be5547dd486a630e8eb61fe7873f6c

--- a/modules/profile/templates/mediawiki/jobrunner/site.conf.erb
+++ b/modules/profile/templates/mediawiki/jobrunner/site.conf.erb
@@ -6,3 +6,16 @@
     ErrorLog ${APACHE_LOG_DIR}/jobqueue-error.log
     CustomLog ${APACHE_LOG_DIR}/jobqueue-access.log wmf
 </VirtualHost>
+
+<VirtualHost *:<%= @local_only_port %>>
+    ServerName jobrunner.svc.<%= scope['::site'] %>.wmnet
+    ServerAlias jobrunner.discovery.wmnet
+    DocumentRoot "/srv/mediawiki"
+    # Only selected paths are allowed here
+    # TODO: move monitoring directly to RunSingleJob.php when it's ready?
+    ProxyPass /wiki/health-check.php fcgi://127.0.0.1:9000/srv/mediawiki/w/health-check.php retry=0
+    ProxyPass /rpc/RunJobs.php fcgi://127.0.0.1:9000/srv/mediawiki/rpc/runJobs.php retry=0
+    ProxyPass /rpc/RunSingleJob.php fcgi://127.0.0.1:9000/srv/mediawiki/rpc/runJobs.php retry=0
+    ErrorLog ${APACHE_LOG_DIR}/jobqueue-error.log
+    CustomLog ${APACHE_LOG_DIR}/jobqueue-access.log wmf
+</VirtualHost>
